bk_ida/gccida/g2/etoe64
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/etoe64/src/real.c:4149:20: error: use of undeclared identifier 'XFlittlenan'
for ( i = 0; ; i = XFlittlenan[v6] ) 
                   ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/etoe64/src/obj/real.o] Error 1
